docs/7.54/md/abenconversion_type_p.md
---
title: "Source Field Type p"
description: |
  If the program attribute fixed point arithmetic(https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenfixed_point_arithmetic_glosry.htm 'Glossary Entry') is not set, the decimal separator in source fields with the type p(https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenbui
version: "7.54"
category: "types"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenconversion_type_p.htm"
abapFile: "abenconversion_type_p.htm"
keywords: ["insert", "do", "if", "case", "try", "method", "class", "data", "types", "abenconversion", "type"]
---

* * *

AS ABAP Release 754, ©Copyright 2019 SAP SE. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap.htm) →  [ABAP − Reference](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_data_working.htm) →  [Assignments](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenvalue_assignments.htm) →  [Assignment and Conversion Rules](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenconversion_rules.htm) →  [Conversion Rules for Elementary Data Objects](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenconversion_elementary.htm) →  [Numeric Source Fields](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abennumeric_source_fields.htm) → 

Source Field Type p

If the program attribute [fixed point arithmetic](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenfixed_point_arithmetic_glosry.htm "Glossary Entry") is not set, the decimal separator in source fields with the type [p](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenbuiltin_types_numeric.htm) is ignored, except in assignments to character-like target fields with the types c and string.

-   [Numeric Target Fields](#abenconversion-type-p-1--------character-like-target-fields---@ITOC@@ABENCONVERSION_TYPE_P_2)

-   [Byte-Like Target Fields](#abenconversion-type-p-3--------date-time-fields-as-target-fields---@ITOC@@ABENCONVERSION_TYPE_P_4)

Numeric Target Fields

Target

Conversion

i, int8, (b, s)

The value of the packed number is rounded commercially to an integer number. If this number is within the [value range](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenvalue_range_glosry.htm "Glossary Entry") for the data type i, (b, s), it is converted to the internal representation of the corresponding integer number. If the number is not within this range, the handleable exception CX\_SY\_CONVERSION\_OVERFLOW is raised.

p

The value of the packed number is rounded commercially to the number of [decimal places](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenfractional_portion_glosry.htm "Glossary Entry") of the target field. If this number is within the value range for the data type of the target field, it is converted to the internal representation of a packed number. If the number is not within this range, the handleable exception CX\_SY\_CONVERSION\_OVERFLOW is raised.

decfloat16, decfloat34

The value of the packed number is converted into the internal format of a decimal floating point number. If the number of places for a target field of type decfloat16 is greater than 16 when the assignment is performed, commercial rounding to 16 places is applied. If the mantissa of the target field is long enough, the [scaling](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenscale_glosry.htm "Glossary Entry") is set to the number of [decimal places](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenfractional_portion_glosry.htm "Glossary Entry") of the source field. An invalid value in the source field raises the handleable exception CX\_SY\_CONVERSION\_NO\_NUMBER.

f

The value of the packed number is converted into the internal format of a binary floating point number. If the decimal number cannot be represented as a binary floating point number, the nearest value is used. An invalid value in the source field produces undefined behavior.

Example

The result of the following conversion has the value 8.1499999999999995E-01.

DATA pack TYPE p DECIMALS 3 VALUE '0.815'.
DATA(result) = CONV f( pack ).

Character-Like Target Fields

Target

Conversion

c

The value of the packed number is formatted in [commercial notation](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abennumerical_value.htm) and passed to the target field, flush left. The character "-" is set in the last place for a negative value and a blank is set in the last place for a positive value. If the target field is longer than the sequence of digits, including the sign, the field is padded with blanks on the left. If it is too short, the number representation is moved to the right by one place (in the case of positive values). If the target field is still too short (and in the case of negative values), characters are cut off on the left and the character "\*" is set in the first place of the target field.

n

The value of the packed number is rounded commercially to an integer number. The absolute value is passed to the target field as a right-justified string of digits. If the target field is longer than the string of digits, the field is padded with zeroes on the left. If it is too short, the values on the left are cut off.

string

The value of the packed number is formatted in [commercial notation](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abencommercial_notation_glosry.htm "Glossary Entry") and passed to the target field, flush left. The character "-" is set in the last place for a negative value and a blank is set in the last place for a positive value. The resulting length of the target field is determined by the number of digits, plus the places for the sign and the decimal separator.

Note

If the number of decimal places in the source field is greater than the number of digits calculated from 2 x the length of dobj - 1, the corresponding number of zeroes is inserted between decimal separators and digits in assignments to data objects of the types c and string and the longer sequence of digits is assigned.

Example

The string produced by the conversion is 123,456-.

DATA pack TYPE p DECIMALS 3 VALUE '-123,456'.
DATA(result) = CONV string( pack ).

Byte-Like Target Fields

Target

Conversion

x

The content of the source field is converted first to data type i (see above) and then to type x (see [conversion table for source field type i, int8, (b, s)](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenconversion_type_ibs.htm)).

xstring

The content of the source field is converted first to data type i (see above) and then to type xstring (see [conversion table for source field type i, int8, (b, s)](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenconversion_type_ibs.htm)).

Example

The byte chain produced by the conversion is 0000007C and matches the result of the conversion of the rounded number 124.

DATA pack TYPE p DECIMALS 3 VALUE '123,999'.
TYPES hex TYPE x LENGTH 4.
DATA(result) = CONV hex( pack ).

Date/Time Fields as Target Fields

Target

Conversion

d

The content of the source field is converted first to data type i (see above) and then to type d (see [conversion table for source field type i, int8, (b, s)](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenconversion_type_ibs.htm)).

t

The content of the source field is converted first to data type i (see above) and then to type t (see [conversion table for source field type i, int8, (b, s)](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenconversion_type_ibs.htm)).

utclong

Not supported. Produces a syntax error or raises the exception CX\_SY\_CONVERSION\_NOT\_SUPPORTED.

Note

The method TSTMP2UTCLONG of class [CL\_ABAP\_TSTMP](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abencl_abap_tstmp.htm) converts [time stamps in packed numbers](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abentime_stamps_packed.htm) to [time stamp fields](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abentimestamp_field_glosry.htm "Glossary Entry") of the type utclong.

Example

The value of the date field produced by the conversion is 20170111.

DATA pack TYPE p VALUE 736341.
DATA(result) = CONV d( pack ).